--- a/HillsideDiaryApp/app.json
+++ b/HillsideDiaryApp/app.json
@@ -19,8 +19,7 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true,
-      "userInterfaceStyle": "automatic"
+      "supportsTablet": true
     },
     "android": {
       "userInterfaceStyle": "automatic",
